# coverage-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  benchmark_queries.py  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: ci_pipeline.yml  issue-manager.yml  label-approved.yml  nightly_regression.yml  query-validation.yml  smokeshow.yml  sonarqube-scan.yml  templated_test_publish_pipeline.yml
build_helpers/: README.md
cover_agent.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
coverage_ai/: AICaller.py  CoverageAi.py  CoverageProcessor.py  CustomLogger.py  FilePreprocessor.py  PromptBuilder.py  Runner.py  UnitTestDB.py  UnitTestGenerator.py  UnitTestValidator.py  ai_caller_replay.py  coverage_processor.py  coverage_processor.py‎  custom_logger.py  default_agent_completion.py  main.py  main_full_repo.py  record_replay_manager.py  runner.py  unit_test_db.py‎  unit_test_validator.py‎  utils.py
coverage_ai/analysis_pipeline/: code_analyzer.py
coverage_ai/coverage/: processor.py
coverage_ai/lsp_logic/: ContextHelper.py  logic.py
coverage_ai/lsp_logic/file_map/: file_map.py  query_manager.py
coverage_ai/lsp_logic/multilspy/: language_server.py  multilspy_utils.py
coverage_ai/lsp_logic/scripts/: main.py
coverage_ai/lsp_logic/utils/: utils.py  utils_context.py
coverage_ai/settings/: README.md  config_schema.py  configuration.toml
docs/: Top_Level_Sequence_Diagram.md  UV_MIGRATION_GUIDE.md  adding_new_languages.md  database_usage.md  development.md  features.md  repo_coverage.md  top_level_sequence_diagram.md  usage_examples.md
examples/: filemap_usage_examples.py  query_manager_demo.py
src/: ai_caller.py  ai_caller_replay.py  coverage_ai.py  coverage_processor.py  custom_logger.py  main.py  main_full_repo.py  runner.py  unit_test_db.py  unit_test_generator.py  unit_test_validator.py  utils.py
src/cover_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stored_responses/: docker_demo_responses_f6a7b8c9d0e1.yml  flutter_calculator_responses_c3d4e5f6a7b8.yml  haskell_calc_responses_d4e5f6a7b8c9.yml  java_gradle_responses_3b9f8df90168.yml  python_fastapi_ml_responses_e5f6a7b8c9d0.yml  python_fastapi_responses_a9d9de927a82.yml  rust_cli_responses_a1b2c3d4e5f6.yml  svelte_calculator_responses_b2c3d4e5f6a7.yml
templated_tests/: README.md
templated_tests/c_cli/: .gitignore  Dockerfile  test_calc.c
templated_tests/c_kernel_module/: .gitignore  Makefile  README.md  hello_kernel.c  test_kernel_module.c
templated_tests/cpp_cli/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_and_test_with_coverage.sh  calculator.cpp  calculator.hpp  main.cpp  test_calculator.cpp
templated_tests/cpp_game_engine/: .gitignore  CMakeLists.txt  README.md
templated_tests/cpp_game_engine/include/: entity.h  game.h  math_utils.h  renderer.h
templated_tests/cpp_game_engine/src/: entity.cpp  game.cpp  main.cpp  math_utils.cpp  renderer.cpp
templated_tests/cpp_game_engine/tests/: test_game_engine.cpp  test_math_utils.cpp
templated_tests/csharp_webservice/: .gitignore  README.md
templated_tests/csharp_webservice/CalculatorApi.Tests/: CalculatorControllerTests.cs
templated_tests/docker_demo/: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  server.js  style.css
templated_tests/docker_demo/test/: server.test.js
templated_tests/flutter_calculator/: .gitignore  README.md  pubspec.yaml
templated_tests/go_webservice/: go.mod  go.sum
templated_tests/haskell_calc/: .gitignore  README.md  haskell_calc.cabal
templated_tests/haskell_calc/app/: Main.hs
templated_tests/haskell_calc/src/: Lib.hs
templated_tests/haskell_calc/test/: LibSpec.hs
templated_tests/java_gradle/: settings.gradle
templated_tests/kotlin_spring/: .gitignore  Dockerfile  README.md  build.gradle.kts
templated_tests/nim_cli/: .gitignore  Dockerfile  README.md  nim_cli.nim  nim_cli.nimble
templated_tests/node_express/: .gitignore  README.md  package.json
templated_tests/php_laravel/: .env.example  .gitignore  Dockerfile  README.md  composer.json
templated_tests/python_fastapi/: README.md  app.py  test_app.py
templated_tests/python_fastapi_ml/: .gitignore  README.md  app.py  requirements.txt  test_app.py
templated_tests/python_readyapi/: README.md  app.py  requirements.txt  test_app.py
templated_tests/react_calculator/: Dockerfile  package.json
templated_tests/ruby_sinatra/: Dockerfile  Gemfile  app.rb  test_app.rb
templated_tests/rust_cli/: .gitignore  Cargo.toml  Dockerfile  README.md
templated_tests/svelte_calculator/: .gitignore  README.md  package.json  vite.config.js
templated_tests/typescript_calculator/: Dockerfile
templated_tests/vue_calculator/: .gitignore  README.md  index.html  package.json  vite.config.js
templated_tests/zig_cli/: .gitignore  Dockerfile  README.md  build.zig
tests/: test_AICaller.py  test_CoverageAi.py  test_CoverageProcessor.py  test_FilePreprocessor.py  test_PromptBuilder.py  test_ReportGenerator.py  test_Runner.py  test_UnitTestDB.py  test_UnitTestGenerator.py  test_UnitTestValidator.py  test_agent_completion_abc.py  test_ai_caller.py  test_ai_caller_replay.py  test_config_schema.py  test_coverage_ai.py  test_coverage_processor.py  test_custom_logger.py  test_default_agent_completion.py  test_file_preprocessor.py  test_get_queries.py  test_load_yaml.py  test_main.py  test_record_replay_manager.py  test_report_generator.py  test_runner.py  test_unit_test_db.py  test_unit_test_generator.py  test_unit_test_validator.py  test_utils.py  test_version.py
tests/coverage/: test_processor.py
tests_integration/: README.md  analyze_tests.py  conftest.py  docker_utils.py  increase_coverage.py  run_test_all.py  run_test_with_docker.py  scenarios.py  test_all.sh  test_e2e.py  test_with_docker.sh
tests_integration/python_readyapi/: Dockerfile  test_openai.sh
tests_integration/tests/: test_docker_utils.py
wandb/: latest-run
wandb/run-20240603_125352-q90w4sao/: run-q90w4sao.wandb
(+68 files in other folders)
