[tool.poetry]
name = "coverage-ai"
version = "0.0.0" # Placeholder. Will be replaced by dynamic versioning.
description = "Coverage Ai Tool"
authors = ["KhulnaSoft <info@khulnasoft.com>"]
license = "Apache 2.0"
readme = "README.md"

# Define where your Python package(s) are
packages = [
    { include = "coverage_ai" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jinja2 = "^3.1.3"
beautifulsoup4 = "^4.12.3"
poetry-dynamic-versioning = "^1.3.0"

# LLM Dependencies
litellm = { git = "https://github.com/mrT23/litellm.git"}
openai = "^1.19.0"
tiktoken = "^0.7.0"
boto3 = "^1.34.117"
google-cloud-aiplatform = "^1.53.0"
numpy = "^1.26.0"   # Note: Earlier version have incompatibility issues with google-cloud-aiplatform
dynaconf = "^3.2.4"
wandb = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pyinstaller = "^6.6.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
readyapi = "^0.110.3"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
coverage-ai = "coverage_ai.main:main"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "coverage_ai/version.txt"
