[project]
name = "cover-agent"
version = "0.0.0" # Placeholder. Will be replaced by dynamic versioning.
description = "Cover Agent Tool"
authors = [
    { name = "KhulnaSoft", email = "tal.r@khulnasoft.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9.17,<3.13"
dependencies = [
    "jinja2>=3.1.5",
    "beautifulsoup4>=4.13.3",
    "sqlalchemy>=2.0.38",
    "diff-cover>=9.2.3",
    "tenacity>=9.0.0",
    "python-dotenv>=1.1.0",
    # Infrastructure Dependencies
    "docker>=7.1.0",
    "boto3>=1.36.25",
    "google-cloud-aiplatform>=1.81.0",
    # LLM Dependencies
    "litellm>=1.61.13",
    "openai>=1.63.2",
    "tiktoken>=0.8.0",
    "numpy>=1.26.4",   # Note: Earlier version have incompatibility issues with google-cloud-aiplatform
    "dynaconf>=3.2.10",
    "wandb>=0.17.9",
    # LSP Dependencies
    "grep_ast>=0.3.3",
    "tree_sitter>=0.21.3",
    "tree_sitter_languages>=1.10.2",
    "jedi-language-server>=0.41.4",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pyinstaller>=6.12.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.8",
    "pytest-timeout>=2.3.1",
    "fastapi>=0.111.1",
]

[project.scripts]
cover-agent = "coverage_ai.main:main"
cover-agent-full-repo = "coverage_ai.main_full_repo:main"
generate-report = "coverage_ai.UnitTestDB:dump_to_report_cli"

# Define where your Python package(s) are
[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
